# Doppelganger

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  build.sh  main.cpp  vcpkg.json
.github/workflows/: build-Linux-debug.yml  build-macOS-debug.yml  build-macOS.yml  build-release.yml  build-windows-debug.yml  build.yml
doc/: defaultConfig.json
example/: CMakeLists.txt  main.cpp
include/Doppelganger/: Core.h  HTTPSession.h  Listener.h  Logger.h  Plugin.h  Room.h  SSLDetector.h  WebsocketSession.h  triangleMesh.h
include/Doppelganger/Util/: decodeBase64ToEigenMatrix.h  download.h  encodeBinDataToBase64.h  encodeEigenMatrixToBase64.h  getCurrentTimestampAsString.h  getPluginCatalogue.h  log.h  unzip.h  uuid.h  writeBase64ToFile.h
plugin/: CMakeLists.txt  plugin.h  pluginHeader.h
plugin/alignCamera/: CMakeLists.txt  module.js
plugin/allMeshesInfo/: CMakeLists.txt  module.js
plugin/browserInfo/: CMakeLists.txt  browserInfo.cpp
plugin/configEditor/: CMakeLists.txt  configEditor.cpp  module.js
plugin/fitToFrame/: CMakeLists.txt  module.js
plugin/getInstalledPlugins/: CMakeLists.txt  getInstalledPlugins.cpp
plugin/hollowMesh/: CMakeLists.txt  hollowMesh.cpp
plugin/listPlugins/: CMakeLists.txt  listPlugins.cpp  module.js
plugin/loadCADData/: CMakeLists.txt  loadCADData.cpp
plugin/loadPolygonMesh/: CMakeLists.txt  loadPolygonMesh.cpp  module.js
plugin/loadTexture/: CMakeLists.txt  loadTexture.cpp
plugin/meshErrorInfo/: CMakeLists.txt  meshErrorInfo.cpp  module.js
plugin/meshInfo/: CMakeLists.txt  module.js
plugin/outlineOnClick/: CMakeLists.txt  module.js
plugin/pullCanvasParameters/: CMakeLists.txt  pullCanvasParameters.cpp
plugin/pullCurrentMeshes/: CMakeLists.txt  pullCurrentMeshes.cpp
plugin/pushCanvasParameters/: CMakeLists.txt  module.js  pushCanvasParameters.cpp
plugin/redo/: CMakeLists.txt  module.js  redo.cpp
plugin/removeAllMeshes/: CMakeLists.txt  module.js  removeAllMeshes.cpp
plugin/removeMesh/: CMakeLists.txt  module.js  removeMesh.cpp
plugin/repairAllMeshes/: CMakeLists.txt  repairAllMeshes.cpp
plugin/repairMesh/: CMakeLists.txt  repairMesh.cpp
plugin/saveAllMeshes/: CMakeLists.txt  saveAllMeshes.cpp
plugin/saveMesh/: CMakeLists.txt  module.js  saveMesh.cpp
plugin/saveScreenshot/: CMakeLists.txt  module.js  saveScreenshot.cpp
plugin/saveScreenshotAll/: CMakeLists.txt  module.js  saveScreenshotAll.cpp
plugin/showAxes/: CMakeLists.txt  module.js
plugin/shutdown/: CMakeLists.txt  module.js  shutdown.cpp
plugin/sortMeshes/: CMakeLists.txt  module.js
plugin/splitIntoIslands/: CMakeLists.txt  module.js  splitIntoIslands.cpp
plugin/syncCursor/: CMakeLists.txt  module.js  syncCursor.cpp
plugin/toggleAxesVisibility/: CMakeLists.txt
plugin/toggleMeshVisibility/: CMakeLists.txt  module.js  toggleMeshVisibility.cpp
plugin/undo/: CMakeLists.txt  module.js  undo.cpp
plugin/updatePlugins/: CMakeLists.txt  updatePlugins.cpp
resources/: config.json  defaultConfig.json  plugins.json
resources/css/: Doppel.css
resources/html/: index.html
resources/js/: APIcall.js  Canvas.js  Plugin.js  setupModal.js  websocket.js  websocketCallBackFuncs.js
src/: CMakeLists.txt  Core.cpp  Core.h  HTTPSession.cpp  HTTPSession.h  Logger.cpp  Logger.h  Plugin.cpp  Plugin.h  Room.cpp  Room.h  WebsocketSession.cpp  main.cpp  triangleMesh.h
src/Doppelganger/: Core.cpp  Core.h  HTTPSession.cpp  Logger.cpp  PlainHTTPSession.cpp  PlainWebsocketSession.cpp  Plugin.cpp  Plugin.h  Room.cpp  Room.h  SSLHTTPSession.cpp  SSLWebsocketSession.cpp  TriangleMesh.cpp  Util.cpp  Util.h  WebsocketSession.cpp  WebsocketSession.h  triangleMesh.cpp  triangleMesh.h
src/Doppelganger/Util/: download.cpp  encodeBinDataToBase64.cpp  getPluginCatalogue.cpp  log.cpp  unzip.cpp  writeBase64ToFile.cpp
src/Util/: download.cpp  download.h  encodeBinDataToBase64.cpp  unzip.cpp  unzip.h  uuid.cpp  uuid.h  writeBase64ToFile.cpp
src/resources/: defaultConfig.json  defaultPluginList.json  installedPlugins.json
src/resources/css/: Doppelganger.css
src/resources/html/: index.html
src/resources/js/: APIcall.js  Canvas.js  Core.js  Modal.js  MouseKey.js  Plugin.js  UI.js  WS.js  WSTasks.js  canvas.js  constructMeshFrom.js  constructMeshFromJson.js  constructMeshLiFrom.js  constructMeshLiFromJson.js  request.js
src/resources/js/old/: Plugin.js  canvas.js  modal.js  mouseKey.js
src/resources/scripts/: FreeCADConvert.py
