cmake_minimum_required(VERSION 3.15)

set(PROJECT DoppelgangerPlugin)
project(${PROJECT})

add_subdirectory(listPlugins)
add_subdirectory(updatePlugins)
add_subdirectory(shutdown)
add_subdirectory(loadPolygonMesh)
add_subdirectory(loadTexture)
add_subdirectory(splitIntoIslands)
add_subdirectory(hollowMesh)
add_subdirectory(removeMesh)
add_subdirectory(removeAllMeshes)
add_subdirectory(repairMesh)
add_subdirectory(repairAllMeshes)
add_subdirectory(toggleMeshVisibility)
add_subdirectory(pullCanvasParameters)
add_subdirectory(pushCanvasParameters)
add_subdirectory(pullCurrentMeshes)
add_subdirectory(undo)
add_subdirectory(redo)
add_subdirectory(syncCursor)
add_subdirectory(toggleAxesVisibility)
add_subdirectory(meshInfo)
add_subdirectory(allMeshesInfo)
add_subdirectory(meshErrorInfo)
add_subdirectory(sortMeshes)
add_subdirectory(outlineOnClick)
add_subdirectory(fitToFrame)
add_subdirectory(alignCamera)
